<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:gravity="center"	>

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:gravity="center"
		android:textColor="#FFFFFF"
		android:textSize="35sp" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/natural"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvNatural"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/orientation"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvOrientation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rotation"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvRotation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/height"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvHeight"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/width"
			android:textSize="25sp"	/>

		<TextView
			android:id="@+id/tvWidth"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/density"
			android:textSize="25sp"	/>

		<TextView
			android:id="@+id/tvDensity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/densityDpi"
			android:textSize="25sp"	/>

		<TextView
			android:id="@+id/tvDensityDpi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/densityType"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvDensityType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scaledDensity"
			android:textSize="25sp"	/>
		
		<TextView
			android:id="@+id/tvScaledDensity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/xdpi"
			android:textSize="25sp"	/>

		<TextView
			android:id="@+id/tvXdpi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ydpi"
			android:textSize="25sp"	/>

		<TextView
			android:id="@+id/tvYdpi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/aspectRatio"
			android:textSize="25sp"/>

		<TextView
			android:id="@+id/tvAspectRatio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp" />
	</LinearLayout>

</LinearLayout>
